--- a/index.html
+++ b/index.html
@@ -7,227 +7,188 @@
 
 <style>
 body {
-  margin:0;
-  background:#000;
-  color:#fff;
-  font-family:Arial;
+    margin: 0;
+    background: #000;
+    color: #fff;
+    font-family: Arial, sans-serif;
 }
 
 header {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:12px;
-  border-bottom:2px solid #facc15;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+    border-bottom: 2px solid #facc15;
 }
 
 header h1 {
-  color:#facc15;
-  font-size:20px;
-  margin:0;
+    color: #facc15;
+    font-size: 24px;
+    margin: 0;
+}
+
+.menu-btn {
+    background: #facc15;
+    color: #000;
+    padding: 10px 16px;
+    border-radius: 8px;
+    border: none;
+    font-weight: bold;
 }
 
 .container {
-  max-width:720px;
-  margin:auto;
-  padding:15px;
+    max-width: 650px;
+    margin: auto;
+    padding: 15px;
 }
 
 .section {
-  border:1px solid #facc15;
-  border-radius:10px;
-  padding:12px;
-  margin-bottom:15px;
+    border: 1px solid #facc15;
+    border-radius: 10px;
+    padding: 12px;
+    margin-bottom: 16px;
+    background: #0b0b0b;
 }
 
 .section-title {
-  color:#facc15;
-  font-size:18px;
-  margin-bottom:8px;
+    color: #facc15;
+    font-size: 18px;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 input, select {
-  width:100%;
-  padding:10px;
-  margin-bottom:8px;
-  background:#000;
-  border:1px solid #facc15;
-  border-radius:6px;
-  color:#fff;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    background: #000;
+    border: 1px solid #facc15;
+    border-radius: 6px;
+    color: #fff;
 }
 
 button {
-  width:100%;
-  padding:12px;
-  margin-top:8px;
-  border:none;
-  border-radius:8px;
-  font-weight:bold;
-  cursor:pointer;
+    width: 100%;
+    padding: 14px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
 }
 
-.btn-yellow { background:#facc15; color:#000; }
-.btn-green { background:#22c55e; color:#000; }
-.btn-blue { background:#2563eb; color:#fff; }
+.btn-yellow { background: #facc15; color: #000; }
+.btn-green { background: #22c55e; color: #000; }
+.btn-blue { background: #2563eb; color: #fff; }
 
 .total {
-  text-align:center;
-  font-size:28px;
-  color:#facc15;
-  margin-top:10px;
+    text-align: center;
+    font-size: 28px;
+    color: #facc15;
+    margin-top: 15px;
 }
 
-.hidden { display:none; }
+.hidden { display: none; }
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Construction Estimator</h1>
-  <button class="btn-yellow" onclick="showHome()">Menu</button>
+    <h1>Construction Estimator</h1>
+    <button class="menu-btn" onclick="showPage('menu')">Menu</button>
 </header>
 
 <div class="container">
 
-<!-- HOME -->
-<div id="home">
-  <div class="section">
-    <div class="section-title">Select Estimate Type</div>
-    <button class="btn-blue" onclick="openSeptic()">Septic System</button>
-    <button class="btn-blue" onclick="openPad()">Building Pad</button>
-  </div>
+<!-- MENU -->
+<div id="menu">
+    <div class="section">
+        <div class="section-title">Select Estimator</div>
+        <button class="btn-blue" onclick="showPage('conventional')">Conventional Septic</button>
+        <button class="btn-blue" onclick="showPage('chamber')">Chamber Septic</button>
+    </div>
 </div>
 
-<!-- SEPTIC ESTIMATOR -->
-<div id="septic" class="hidden">
+<!-- CONVENTIONAL SEPTIC -->
+<div id="conventional" class="hidden">
+    <div class="section">
+        <div class="section-title">Job Info</div>
+        <input id="custName" placeholder="Customer Name">
+        <input id="jobLoc" placeholder="Job Location">
+    </div>
 
-<div class="section">
-  <div class="section-title">Septic – Job Info</div>
-  <input id="custName" placeholder="Customer Name">
-  <input id="jobLoc" placeholder="Job Location">
+    <div class="section">
+        <div class="section-title">System Details</div>
+        <input id="tank" type="number" placeholder="Tank Cost ($)">
+        <input id="field" type="number" placeholder="Field Line Length (ft)">
+        <input id="pipe" type="number" placeholder="Pipe Cost per ft ($)">
+    </div>
+
+    <div class="section">
+        <div class="section-title">Rock</div>
+        <input id="rockTons" type="number" placeholder="Rock Tons">
+        <input id="rockCost" type="number" value="17">
+    </div>
+
+    <div class="section">
+        <div class="section-title">Labor</div>
+        <input id="labor" type="number" value="20000">
+        <input id="markup" type="number" value="20">
+    </div>
+
+    <button class="btn-yellow" onclick="calculate()">Calculate Total</button>
+    <button class="btn-green" onclick="generateQuote()">Generate Quote</button>
+    <div class="total" id="total">$0.00</div>
 </div>
 
-<div class="section">
-  <div class="section-title">System Details</div>
-  <input id="tankCost" type="number" placeholder="Tank Cost ($)">
-  <input id="fieldLength" type="number" placeholder="Field Line Length (ft)">
-  <input id="pipeCost" type="number" placeholder="Pipe Cost per ft ($)">
-</div>
-
-<div class="section">
-  <div class="section-title">Rock (Hauled In)</div>
-  <input id="rockTons" type="number" placeholder="Rock Tons">
-  <input id="rockCost" type="number" value="17" placeholder="Cost per Ton">
-</div>
-
-<div class="section">
-  <div class="section-title">Labor</div>
-  <select id="crew">
-    <option value="1">1 Man / 1 Machine</option>
-    <option value="1.3">2 Men / 2 Machines</option>
-  </select>
-  <input id="laborBase" type="number" placeholder="Base Labor Cost">
-  <input id="markup" type="number" value="22" placeholder="Markup %">
-</div>
-
-<button class="btn-yellow" onclick="calcSeptic()">Calculate Septic</button>
-<div class="total" id="septicTotal">$0.00</div>
-
-</div>
-
-<!-- PAD ESTIMATOR -->
-<div id="pad" class="hidden">
-
-<div class="section">
-  <div class="section-title">Building Pad – Job Info</div>
-  <input id="padCust" placeholder="Customer Name">
-  <input id="padLoc" placeholder="Job Location">
-</div>
-
-<div class="section">
-  <div class="section-title">Pad Dimensions</div>
-  <input id="padLen" type="number" placeholder="Length (ft)">
-  <input id="padWid" type="number" placeholder="Width (ft)">
-  <input id="padDepth" type="number" placeholder="Avg Fill Depth (in)">
-</div>
-
-<div class="section">
-  <div class="section-title">Fill</div>
-  <select id="fillType">
-    <option value="0">On-site</option>
-    <option value="12">Imported Fill</option>
-    <option value="18">Structural Fill</option>
-  </select>
-</div>
-
-<div class="section">
-  <div class="section-title">Rock Cap</div>
-  <input id="rockIn" type="number" placeholder="Rock Thickness (in)">
-</div>
-
-<div class="section">
-  <div class="section-title">Labor</div>
-  <select id="padCrew">
-    <option value="1">1 Man / 1 Machine</option>
-    <option value="1.3">2 Men / 2 Machines</option>
-  </select>
-  <input id="padLabor" type="number" value="8000">
-  <input id="padMarkup" type="number" value="22">
-</div>
-
-<button class="btn-yellow" onclick="calcPad()">Calculate Pad</button>
-<div class="total" id="padTotal">$0.00</div>
-
+<!-- CHAMBER SEPTIC -->
+<div id="chamber" class="hidden">
+    <div class="section">
+        <div class="section-title">Chamber System</div>
+        <p>Labor preset adjusted for chamber install.</p>
+        <button class="btn-blue" onclick="document.getElementById('labor').value=17000;showPage('conventional')">
+            Start Chamber Estimate
+        </button>
+    </div>
 </div>
 
 </div>
 
 <script>
-const $ = id => document.getElementById(id);
-const val = id => parseFloat($(id).value) || 0;
-
-function showHome() {
-  home.classList.remove("hidden");
-  septic.classList.add("hidden");
-  pad.classList.add("hidden");
+function showPage(id) {
+    document.querySelectorAll('#menu, #conventional, #chamber')
+        .forEach(p => p.classList.add('hidden'));
+    document.getElementById(id).classList.remove('hidden');
 }
 
-function openSeptic() {
-  home.classList.add("hidden");
-  septic.classList.remove("hidden");
-  pad.classList.add("hidden");
+function val(id){ return parseFloat(document.getElementById(id).value)||0; }
+
+function calculate(){
+    const total =
+        val('tank') +
+        (val('field') * val('pipe')) +
+        (val('rockTons') * val('rockCost')) +
+        val('labor');
+
+    const markup = total * (val('markup')/100);
+    document.getElementById('total').innerText =
+        '$' + (total + markup).toFixed(2);
 }
 
-function openPad() {
-  home.classList.add("hidden");
-  pad.classList.remove("hidden");
-  septic.classList.add("hidden");
-}
+function generateQuote(){
+    calculate();
+    const total = parseFloat(document.getElementById('total').innerText.replace('$',''));
+    const deposit = total > 10000 ? (total*0.15).toFixed(2) : '0.00';
 
-function calcSeptic() {
-  const total =
-    val("tankCost") +
-    (val("fieldLength") * val("pipeCost")) +
-    (val("rockTons") * val("rockCost")) +
-    (val("laborBase") * val("crew"));
-
-  const final = total + total * (val("markup") / 100);
-  septicTotal.innerText = "$" + final.toFixed(2);
-}
-
-function calcPad() {
-  const yards = (val("padLen") * val("padWid") * (val("padDepth") / 12)) / 27;
-  const fill = yards * val("fillType");
-
-  const rockTons = ((val("padLen") * val("padWid") * (val("rockIn") / 12)) / 27) * 1.4;
-  const rock = rockTons * 17;
-
-  let labor = val("padLabor") * val("padCrew");
-  const subtotal = fill + rock + labor;
-  const final = subtotal + subtotal * (val("padMarkup") / 100);
-
-  padTotal.innerText = "$" + final.toFixed(2);
+    const win = window.open('');
+    win.document.write(`
+        <h1>Crestview Construction LLC</h1>
+        <p>Total Price: $${total.toFixed(2)}</p>
+        <p>Deposit: $${deposit}</p>
+        <p>${total>10000?'Progress payments required':'Payment due at completion'}</p>
+        <script>window.print()</script>
+    `);
 }
 </script>
 
